src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply bg-slate-950;
  @apply min-h-screen;
  @apply h-full;
  @apply w-full;
  @apply flex;
  @apply flex-col;
  @apply text-slate-50;
}

#root {
  @apply flex;
  @apply flex-col;
  @apply h-screen;
  @apply items-center;
  @apply justify-between;
  @apply text-center;

  @apply-justify-center;
}

input,
textarea {
  @apply bg-slate-800;
  @apply border-none;
  @apply p-2;
  @apply text-slate-50;
  @apply rounded;
  @apply focus:outline-none;
  @apply focus:ring-0;
  @apply focus:border-violet-400;
  @apply focus:border-solid;
  @apply focus:border-2;
}

h1 {
  @apply text-3xl;
  @apply font-semibold;
}

h3 {
  @apply text-xl;
  @apply font-semibold;
}

.button-primary {
  @apply bg-violet-400;
  @apply hover:bg-violet-600;
  @apply px-4;
  @apply py-2;
  @apply rounded;
  @apply text-slate-900;
  @apply hover:text-slate-50;
  @apply font-semibold;
  @apply h-fit;
}

.button-loud {
  @apply bg-green-400;
  @apply hover:bg-green-600;
  @apply px-4;
  @apply py-2;
  @apply rounded;
  @apply text-slate-950;
  @apply hover:text-slate-50;
  @apply font-semibold;
  @apply h-fit;
}

.button-lowkey {
  @apply bg-none;
  @apply hover:bg-slate-600;
  @apply px-4;
  @apply py-2;
  @apply rounded;
  @apply text-slate-300;
  @apply text-sm;
  @apply hover:text-slate-100;
  @apply h-fit;
}

